ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment5/input.ts.stderr
error[1162]: An object member cannot be declared optional
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript6/ShorthandPropertyAssignment/parserShorthandPropertyAssignment5/input.ts:2:18
  |
2 | var obj = { greet? }; 
  |                  ^

